--- a/Adivinancitas/Adivinancitas.csproj
+++ b/Adivinancitas/Adivinancitas.csproj
@@ -190,6 +190,7 @@
     <Content Include="Img\Rosa.png" />
     <Content Include="Img\Roshi.png" />
     <Content Include="Img\screamshots\adivinancitas.png" />
+    <Content Include="Img\screamshots\game.png" />
     <Content Include="Img\screamshots\usuarios.png" />
     <Content Include="Img\Stitch.png" />
     <Content Include="Img\Verso.png" />
